# hot_platforms

./: .gitignore  BombMode.cpp  BombMode.h  CMakeLists.txt  Settings.cpp  Settings.h  TStateTypes.h  game.h  main.cpp  sdkconfig  sdkconfig.old  settings.cpp  settings.h
FSM_classes/: FSM.cpp  FSM.h  State.cpp  State.h  Transition.cpp  Transition.h
IOcontroller/: EspIoController.cpp  EspIoController.h  IOController.h  PcIOController.cpp  PcIOController.h
main/: BombMode.cpp  BombMode.h  CMakeLists.txt  TStateTypes.h  hotplates.cpp  pinouts.h  settings.h
